--- a/Python_basics.ipynb
+++ b/Python_basics.ipynb
@@ -10,7 +10,7 @@
         "3U3Y9s1zmWBe",
         "7KrIM8iJ9FM4"
       ],
-      "authorship_tag": "ABX9TyMw0bsaasV/8V4A73HFyXJ2",
+      "authorship_tag": "ABX9TyPJlCIxlv06duV3Uew9Fd7K",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -510,13 +510,32 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "lwwA1ld_Yfe8"
+        "id": "lwwA1ld_Yfe8",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7891cfdc-ea0b-409b-9e4e-4451b77240cc"
       },
       "source": [
-        "#SAMPLE FUNCTION\n"
+        "#SAMPLE FUNCTION\n",
+        "def abc(x):\n",
+        "  ans = x**(x+2)\n",
+        "  return ans\n",
+        "y=abc(int(input()))\n",
+        "print(y)  \n",
+        "\n"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 86,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "5\n",
+            "78125\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
