--- a/Python_basics.ipynb
+++ b/Python_basics.ipynb
@@ -8,9 +8,13 @@
       "collapsed_sections": [
         "DvDmDdfOhO8I",
         "3U3Y9s1zmWBe",
-        "7KrIM8iJ9FM4"
+        "7KrIM8iJ9FM4",
+        "h8kO_Ye633-M",
+        "ZJLv1L14VhNN",
+        "umyNHN1tYYiO",
+        "eRxneb7wIiTl"
       ],
-      "authorship_tag": "ABX9TyPJlCIxlv06duV3Uew9Fd7K",
+      "authorship_tag": "ABX9TyOPWOBePOoDTJsg+Ghat5Kj",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -514,7 +518,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "7891cfdc-ea0b-409b-9e4e-4451b77240cc"
+        "outputId": "6fc28019-282d-499b-e89e-4af2ecc938f0"
       },
       "source": [
         "#SAMPLE FUNCTION\n",
@@ -523,17 +527,207 @@
         "  return ans\n",
         "y=abc(int(input()))\n",
         "print(y)  \n",
+        "\n",
+        "#multiple arguments\n",
+        "def abc(x,y):\n",
+        "  z=x+y\n",
+        "  return z\n",
+        "print(abc(int(input()),int(input())))\n",
+        "\n",
+        "#arbitrary arguments\n",
+        "def abc(*d):\n",
+        "  ans=[]\n",
+        "  for i in range(len(d)):\n",
+        "    ans.append(d[i])\n",
+        "  return ans\n",
+        "print(abc(1,2,3,\"doge\"))    \n",
+        "\n",
+        "#keyword arguments\n",
+        "def abc(a,b,c):\n",
+        "  c=a*b+c\n",
+        "  return c\n",
+        "print(abc(a=int(input()),b=int(input()),c=int(input())))  \n",
+        "\n",
+        "# arbitrary keyword argument\n",
+        "def abc(**com):\n",
+        "  print(com[\"b\"]+com[\"c\"])\n",
+        "\n",
+        "abc(a=1,b=2,c=3)  \n",
         "\n"
       ],
-      "execution_count": 86,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "5\n",
-            "78125\n"
+            "78125\n",
+            "6\n",
+            "9\n",
+            "15\n",
+            "[1, 2, 3, 'doge']\n",
+            "10\n",
+            "11\n",
+            "12\n",
+            "122\n",
+            "5\n"
           ],
           "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "eRxneb7wIiTl"
+      },
+      "source": [
+        "# **FILE HANDLING**\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GUzLdUt_JF0t"
+      },
+      "source": [
+        "#File io basics\n",
+        "\"\"\"\n",
+        "\"r\"-open file for reading -default\n",
+        "\"w\"-open file for writing\n",
+        "\"x\"-creates file if not exists\n",
+        "\"a\"- append a file\n",
+        "\"t\"- text mode\n",
+        "\"b\"- binary mode\n",
+        "\"+\"read and write\n",
+        "\"\"\"\n",
+        "\n",
+        "\n",
+        "# f=open(\"shiv.txt\",\"rt\")\n",
+        "# x=f.read()\n",
+        "# print(x)\n",
+        "# f.close()\n",
+        "# for line in f:\n",
+        "#     print(line)\n",
+        "# print(f.readline())\n",
+        "# print(f.readlines())\n",
+        "# f.close()"
+      ],
+      "execution_count": 15,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "6yv9y5oo0AaM"
+      },
+      "source": [
+        "\n",
+        "#WRITING AND APPENDING A FILE\n",
+        "# f=open(\"shiva.txt\",\"w\")\n",
+        "# for i in range(5):\n",
+        "#     f.write(input())\n",
+        "#     f.write(\"\\n\")\n",
+        "# # f.close()\n",
+        "# f=open(\"shiva.txt\",\"r\")    \n",
+        "# # x=f1.read()\n",
+        "# x=f.readlines()\n",
+        "# print(x)\n",
+        "# f=open(\"shiva.txt\",\"a\")\n",
+        "# a=f.write(\"hello\")\n",
+        "# print(a)\n",
+        "\n",
+        "\n",
+        "# Handle read and write both\n",
+        "# f=open(\"shiva.txt\",\"r+\")\n",
+        "# print(f.read())\n",
+        "# f.write(\"\\nGOOD bye\")"
+      ],
+      "execution_count": 2,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "id": "ra9-G-HP7NZA",
+        "outputId": "c9bc1963-3c12-4b46-bb8b-68eca7a3973c"
+      },
+      "source": [
+        "#SEEK() and TELL() functions\n",
+        "\"\"\"\n",
+        "f=open(\"shiva.txt\")\n",
+        "print(f.tell()) #tells the current position of the file pointer\n",
+        "print(f.readline())\n",
+        "# print(f.tell())\n",
+        "f.seek(0) # initializes file pointer as desired \n",
+        "print(f.readline())\n",
+        "# print(f.tell())\n",
+        "print(f.readline())\n",
+        "# print(f.tell())\n",
+        "f.close()\n",
+        "\"\"\""
+      ],
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'\\nf=open(\"shiva.txt\")\\nprint(f.tell()) #tells the current position of the file pointer\\nprint(f.readline())\\n# print(f.tell())\\nf.seek(0) # initializes file pointer as desired \\nprint(f.readline())\\n# print(f.tell())\\nprint(f.readline())\\n# print(f.tell())\\nf.close()\\n'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "id": "mFTthe0e7ZTa",
+        "outputId": "1a1cf7db-df0b-42d2-8f74-2bf667941394"
+      },
+      "source": [
+        "# with block\n",
+        "\"\"\"\n",
+        "with open(\"shiva.txt\") as f:\n",
+        "    x=f.read()\n",
+        "    print(x)\n",
+        "\n",
+        "\n",
+        "# f=open(\"shiva.txt\",\"rt\")\n",
+        "# print(f.read())\n",
+        "\"\"\""
+      ],
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'\\nwith open(\"shiva.txt\") as f:\\n    x=f.read()\\n    print(x)\\n\\n\\n# f=open(\"shiva.txt\",\"rt\")\\n# print(f.read())\\n'"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 4
         }
       ]
     }
